ksr -> degree of truth for many summarizers